# livecoding

./: .gitignore  BACKLOG.md  Dockerfile  Makefile  README.md  livecoding.service  package-lock.json  package.json  pyproject.toml  roadmap.md
.github/workflows/: deploy.yml
frontend/: 503.html  app.js  home.js  index.html  room.js
frontend/lib/: document.js  test_document.js
frontend/public/: bundle.js  bundle.js.map  style.css
livecoding/: document.py  main.py  model.py  room.py  settings.py  utils.py
livecoding/domain/: document.py  message.py  room.py
static/: home.js  index.html  room.js  style.css
static/lib/: theme.js
